tests/compile-fail/Rule_10_5.rs
fn main() {
    let x: bool = 3 as bool; //~ ERROR cannot cast as `bool`
}
